# api/index.ts
@@ -4,7 +4,6 @@ import cors from "cors";
 import errorHandler from "./middlewares/errorMiddleware.js";
 import { checkConnection } from "./database/check-connection.js";
 
-
 const app: Express = express();
 const port = environment.PORT;
 app.use(express.json());
@@ -13,8 +12,17 @@ app.use(cors());
 checkConnection();
 // Public routes
 import authRoutes from "./routes/publicAccess/auth.routes.js";
+// Customer routes
+import customerRoutes from "./routes/customerAccess/customer.routes.js";
+// Admin routes
+import customerRoutesAdmin from "./routes/adminAccess/customer.routes.js";
+
 // Public routes
 app.use("/api/auth", authRoutes);
+// Customer routes
+app.use("/api/customers", customerRoutes);
+// Admin routes
+app.use("/api/admin/customers", customerRoutesAdmin);
 
 app.use(errorHandler);
 
